# questa

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: demo.tape  schema.md
examples/: applications.json
src/: app.rs  data.rs  export.rs  logging.rs  main.rs  text.rs  ui.rs
templates/: export.typ
tests/snapshots/: questa__ui__snapshot_tests__add_form_overlay_partially_filled.snap  questa__ui__snapshot_tests__confirm_delete_overlay.snap  questa__ui__snapshot_tests__empty_state_shows_no_match_message.snap  questa__ui__snapshot_tests__help_overlay.snap  questa__ui__snapshot_tests__main_screen_with_two_entries.snap  questa__ui__snapshot_tests__note_input_overlay_with_text.snap  questa__ui__snapshot_tests__status_picker_overlay.snap
